# coding-challenges

./: README.md
.github/workflows/: rust.yml
cut/: Cargo.toml  README.md
cut/src/: main.rs
cut/tests/: tests.rs
json-parser/: Cargo.toml  README.md
json-parser/src/: json.pest  json_parser.rs  main.rs
json-parser/tests/: all_steps.rs
wc/: Cargo.toml  README.md
wc/src/: main.rs
wc/tests/: tests.rs
