[package]
name = "json-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
pest = "2.7.10"
pest_derive = "2.7.10"

[dev-dependencies]
assert_cmd = "2.0.14"
paste = "1.0.14"
predicates = "3.1.0"
